--- a/ventapp-backend-tareaJF/src/main/resources/application.properties
+++ b/ventapp-backend-tareaJF/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/ventappbdjf
+spring.datasource.data-username=postgres
+spring.datasource.data-password=123456
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jackson.default-property-inclusion=NON_NULL
